crates/uitest/fixtures/ty/def/trait_arg_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_arg_mismatch.fe
---
error[2-0011]: incorrect number of generic arguments for `Foo`; expected 1, given 0
   ┌─ trait_arg_mismatch.fe:11:6
   │
11 │ impl Foo for u32 {}
   │      ^^^ expected 1 arguments, but 0 were given

error[2-0012]: invalid type argument kind for `Foo`
  ┌─ trait_arg_mismatch.fe:8:6
  │
8 │ impl Foo<i32> for i32 {}
  │      ^^^^^^^^ expected `(* -> *)` kind, but `i32` has `*` kind

error[2-0012]: invalid type argument kind for `Foo`
  ┌─ trait_arg_mismatch.fe:9:6
  │
9 │ impl Foo<Option<i32>> for i32 {}
  │      ^^^^^^^^^^^^^^^^ expected `(* -> *)` kind, but `Option<i32>` has `*` kind
